--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 {
   text-transform: uppercase;
   font-weight: 400;
   font-size: 35px;
-  font-family: montserrat,, sans-serif;
+  font-family: montserrat, sans-serif;
 }
 
 h2 {
