--- a/avis.css
+++ b/avis.css
@@ -5,12 +5,13 @@ h1 {
 }
 /****** Comments */
 
-/*** Containers */
+/*** Comments Containers */
 .opinions-container {
     border: 1px solid red;
-    min-height: 20vh;
     margin: 30px 0;
     padding: 5px;
+    min-height: 100%;
+    overflow: auto;
 }
 
 .stars-rating-container {
@@ -24,7 +25,6 @@ h1 {
     width: 100%;
     position: relative;
     width: 250px;
-    background: #F9C9C8;
     box-shadow: 0px 0px 3px black;
     border-radius: 10px;
     padding: 10px;
@@ -33,10 +33,12 @@ h1 {
 
 .even {
     float: right;
+    background: #F9C9C8;
 }
 
 .uneven {
     float: left;
+    background: #f9c9c880;
 }
 
 
@@ -55,8 +57,11 @@ h1 {
     text-shadow: none;
 }
 
+
+/****** Submit form */
+
 .add-opinion-container {
-    width: 50%;
+    width: 100%;
     margin: 0 auto;
     margin-top: 50px;
 }
