--- a/avis.css
+++ b/avis.css
@@ -7,7 +7,9 @@ h1 {
 
 /*** Comments Containers */
 .opinions-container {
-    border: 1px solid red;
+    
+    background-color: rgba(107, 37, 37, 0.03);
+   
     margin: 30px 0;
     padding: 5px;
     min-height: 100%;
@@ -61,7 +63,21 @@ h1 {
 /****** Submit form */
 
 .add-opinion-container {
+    text-align: center;
     width: 100%;
     margin: 0 auto;
     margin-top: 50px;
+}
+
+.submit-element {
+    display: block;
+    width: auto;
+    margin: 10px auto;
+    padding: 5px;
+}
+
+#submit {
+    cursor: pointer;
+    background-color: #f9c9c880;
+    border-radius: 5px;
 }
