--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ h3 {
 
 
 
-
 /* NAVBAR */
 
 .navbar {
@@ -59,8 +58,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 6vh;
-  width: 100%;
+  width: 100vw;
   height: 13vh;
   background-color: var(--subtitle2-color);
 }
@@ -95,6 +93,7 @@ h3 {
   text-decoration: underline;
 }
 
+
 /* NAV BURGER MENU */
 
 .burger {
@@ -115,6 +114,7 @@ h3 {
   transform: translateX(0%) !important;
   opacity: 1;
 }
+
 
 /* NAV BURGER MENU ITEM */
 
@@ -146,6 +146,10 @@ h3 {
   .nav-burger-item a:hover {
     text-decoration: underline;
   }
+
+
+
+  /* NAV RESPONSIVE */
 
   @media screen and (max-width: 680px) {
     header {
@@ -205,10 +209,13 @@ h3 {
     min-width: 500px;
   }
 
-  .navbar .desktop {
+  .navbar .mobile {
     display: none;
   }
 }
+
+
+
 /* Burger Menu Animation */
 
 @keyframes navLinkFade {
