--- a/avis.css
+++ b/avis.css
@@ -24,9 +24,8 @@ h1 {
 /*** Append comment div */
 .unique-comment-container {
     
-    width: 100%;
+    width: 60%;
     position: relative;
-    width: 250px;
     box-shadow: 0px 0px 3px black;
     border-radius: 10px;
     padding: 10px;
@@ -80,4 +79,23 @@ h1 {
     cursor: pointer;
     background-color: #f9c9c880;
     border-radius: 5px;
+}
+
+
+@media screen and (min-width: 549px) {
+
+    .unique-comment-container {
+        margin: 25px;
+    }
+    .add-opinion-container {
+        transform: scale(1.5);
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+    textarea {
+        resize: both;
+        min-width: 50%;
+        min-height: 20vh;
+    }
+
 }
