--- a/avis.css
+++ b/avis.css
@@ -1,4 +1,3 @@
-
 h1 {
     text-align: center;
     margin: 20px;
@@ -9,7 +8,7 @@ h1 {
 .opinions-container {
     
     background-color: rgba(107, 37, 37, 0.03);
-   
+    width: 100%;
     margin: 30px 0;
     padding: 5px;
     min-height: 100%;
@@ -96,6 +95,7 @@ h1 {
         resize: both;
         min-width: 50%;
         min-height: 20vh;
+        margin: 0 auto;
     }
 
 }
