--- a/reservation.css
+++ b/reservation.css
@@ -10,16 +10,15 @@ h2 {
 
 /****** Date pickup reservation */
 
-#reservation-global-container, #reservation-phone-container {
+#reservation-global-container, #reservation-phone-container, #reservation-events-container {
     width: 100%;
-    margin: 10px auto;
+    margin: 25px auto;
     text-align: center;
     overflow-x: auto; 
 }
 
 #reservation-global-container {
     background-color: rgba(107, 37, 37, 0.03);
-    border: 1px solid red;
 }
 
 h2, h3 {
@@ -36,18 +35,27 @@ h2, h3 {
     padding: 10px;
 }
 
-#submit{
+.reservation-button {
     cursor: pointer;
     padding: 15px;
     border-radius: 5px;
     background-color: #f9c9c880;
+    transition: 0.3s;
+    transform: scale(1);
+    font-size: 1.3rem;
+}
+
+.reservation-button:hover {
+    transform: scale(1.2);
+    background-color: #F76C6C;
+    color: white;
 }
 
 
 /****** Phone reservation */
 
 #reservation-phone-container {
-    margin-top: 50px;
+    margin: 50px auto;
 }
 
 .phone-number {
@@ -58,4 +66,15 @@ h2, h3 {
 a {
     color: #F76C6C;
     text-decoration: none;
+}
+
+/****** Events reservation */
+
+#reservation-events-container {
+    padding: 20px;
+    background-color: rgba(107, 37, 37, 0.03);
+}
+
+#reservation-events-container > * {
+    margin: 15px auto;
 }
