--- a/presentation.css
+++ b/presentation.css
@@ -1,6 +1,30 @@
+  /* GENERAL */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  font-size: 16px;
+  font-family: raleway , sans-serif;
+  --main-bg-color: #fff;
+  --main-text-color: rgb(25, 25, 25);
+  --nav-bg-color: #38424e;
+  --nav-text-color: #fff;
+  --title-color: #38424e;
+  --subtitle-color: #8e8e8c;
+  --subtitle2-color: #F9C9C8;
+  --subtitle3-color: #F76C6C;
+}
+
+  
+  
   /* titles & texts */
 
-  h1 {
+
+h1 {
     color: var(--title-color);
     text-transform: uppercase;
     font-weight: 400;
@@ -10,14 +34,29 @@
     
   }
 
-  .p {
-    font-size: 16px;
-    font-family: raleway , sans-serif;
-    color: #F76C6C;
-    text-align: center;
-    border: 2px solid #38424e;
-    margin: 10px;
+
+.image-about {
+  align-content: center;
+  margin: 5px;
+  width: 100%;
+  height: 300px;
+
 }
+
+.burger {
+  align-content: center;
+  margin: 5px;
+  width: 100%;
+  height: 300px;
+}
+
+.p{
+  text-align: center;
+  font-size: 16px;
+  font-family: raleway , sans-serif;
+  color:  rgb(25, 25, 25);
+}
+
 
 
 
