--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     }
     
     .theme {
-    width: 150px;
-    height: 150px;
+    width: 60px;
+    height: 60px;
     border: 1px solid black
     }
     
@@ -14,4 +14,17 @@
     }
     .img-container {
         text-align: center;
+    }
+    @media screen and (max-width:375px)
+    {
+        .img-container {
+            max-width: 375px;
+        }
+        .theme {
+            width: 100%;
+        }
+        .event-container {
+            display: flex;
+            flex-flow: column;
+        }
     }
