--- a/css/contact.css
+++ b/css/contact.css
@@ -13,6 +13,10 @@
   --subtitle3-color: #F76C6C;
 } */
 
+* {
+  margin : 0;
+}
+
 body {
   width: 100vw;
   height: 100vh;
@@ -41,7 +45,7 @@ body {
   color: var(--nav-text-color);
   text-transform: uppercase;
   font-weight: 400;
-  font-size: 6vw;
+  font-size: 3vw;
   font-family: "Montserrat", sans-serif;
   font-style: italic;
 }
@@ -104,6 +108,80 @@ body {
 
 .form-container {
   width: 100%;
-  height: 40vh;
+  min-height: 40vh;
   background-color: var(--main-bg-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items:center;
+  margin-bottom: 10vh;
+  padding-top: 15px;
 }
+
+.form-items {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 10px;
+  width: 80%;
+}
+
+.form-submit {
+  margin: 10px;
+  padding: 5px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: var(--subtitle2-color);
+  background-color: var(--subtitle2-color);
+  color: var(--main-bg-color);
+  font-size: 1rem;
+  font-weight: 500;
+  width: 65px;
+  align-self: stretch;
+  margin-left: 10%;
+}
+
+
+/* Responsive */
+@media screen and (max-width: 1100px) and (min-width: 780px) {
+  .adress-item-container {
+    flex-flow: column nowrap;
+  }
+}
+
+@media screen and (min-width: 780px) {
+
+  .main {
+    height: 40vh;
+  }
+
+  .container {
+    flex-direction: row;
+    align-items: stretch;
+    height: 54vh;
+  }
+
+  .adress-container {
+    height: 100%;
+    background-color: var(--subtitle2-color);
+  }
+
+  .adress-container a, .adress-container p {
+    font-size: 15px
+  }
+
+
+  .map {
+    height: 100%;
+  }
+
+  .form-container {
+    height: 100%;
+    order: -1;
+  }
+  /* .adress-item-container {
+    order: 0;
+    background-color: aqua;
+  } */
+}
+
