--- a/style.css
+++ b/style.css
@@ -41,7 +41,34 @@ h3 {
   font-weight: 500;
 }
 
+/* text and img */
 
+
+.image-about {
+  align-content: center;
+  margin: 5px;
+  width: 100%;
+  height: 400px;
+  margin: 0 auto;
+}
+
+.burger {
+  align-content: center;
+  margin: 5px;
+  width: 100%;
+  height: 400px;
+  margin: 0 auto;
+}
+
+.p{
+  display: block;
+  text-align: center;
+  margin-block-start: 1em;
+  margin-inline-start: 1em;
+  font-size: 16px;
+  font-family: raleway , sans-serif;
+  color:  rgb(25, 25, 25);
+}
 
 /* NAVBAR */
 
