--- a/avis.css
+++ b/avis.css
@@ -1,13 +1,24 @@
+body {
+    width: 100%;
+    overflow-x: auto;
+}
+
 h1 {
+    background: url('avis-img-2.jpg') center/cover;
     text-align: center;
     margin: 20px;
+    height: 10vh;
+    line-height: 10vh;
+    color: white;
+    text-shadow: 2px 2px 3px black;
 }
 /****** Comments */
 
 /*** Comments Containers */
 .opinions-container {
     
-    background-color: rgba(107, 37, 37, 0.03);
+    /*background-color: #f76c6c2a;*/
+    box-shadow: 0px 3px 5px black;
     width: 100%;
     margin: 30px 0;
     padding: 5px;
