change background to img

--- a/styles/galerie.css
+++ b/styles/galerie.css
@@ -1,41 +1,150 @@
-/* Phone version */
-@media screen and (max-width: 414px) { 
+h1 {
+        font-size: 113%;
+    }
+        
+    h2 {
+        font-size: 219%;
+        font-weight: 500;
+        text-transform: uppercase;
+        color: #38424e;
+        font-family: montserrat, sans-serif;
+        text-align: center;
+        padding: 20px 0px 10px 0px;
+    }
+
+    h3 {
+        font-size: 125%;
+        font-weight: 500;
+        text-transform: uppercase;
+        font-family: raleway, sans-serif;
+        text-align: center;
+        color: #F76C6C;
+        padding: 0px 0px 25px 0px;
+    }
+
+    h4 {
+        font-size: 125%;
+        font-weight: 700;
+        text-align: center;
+        color: #8e8e8c;
+        font-family: montserrat, sans-serif;
+        padding: 0px 0px 20px 0px;
+    }
+
+
+    #gallery-banner {
+        width: 100%;
+        height: 300px;    
+    }
+        
+    .gallery {
+        width: 100%;
+
+    }
+
+    #gallery-header {
+        width: 100%;
+        z-index: 2;
+        position: fixed;
+    }
+
+    #nav-gallery ul {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 0px 20px;
+
+        height: 55px;
+
+        list-style: none;
+        background-color: #fff;
+        opacity: 80%;
+    }
+
+    #nav-gallery li a {
+        width: auto;
+
+        font-family: raleway, sans-serif;
+        font-size: 125%;
+        font-weight: 500;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: #38424e;
+    }
+
+    #nav-gallery li a:hover, a:active {
+        text-decoration: underline;
+        color: #F76C6C;   
+    }
+
+    #gallery {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        
+    }
+
+    .gallery-picture {
+        margin: auto;
+    }
+
+    .gallery-picture img {
+        width: 100%;
+        max-width: 830px;
+        height: auto;
+    }
+
+    .course-container {
+        margin-top: 40px;
+        border-bottom: 1px solid #f1f1f1;
+    }
+
+
+  
+    /* these rules apply only to screens 414 pixels and smaller */
+@media screen and (max-width: 375px) { 
 
     h1 {
-        font-size: 1.13em;
+        font-size: 113%;
     }
     
     h2 {
-        font-size: 16px;
+        font-family: montserrat, sans-serif;
+        font-size: 100%;
         font-weight: 500;
         text-transform: uppercase;
         text-align: center;
         color: #38424e;
-        font-family: montserrat, sans-serif;
         padding: 20px 0px 10px 0px;
 
     }
 
     h3 {
-        font-size: 10px;
+        font-size: 63%;
         font-weight: 500;
         text-transform: uppercase;
-        text-align: center;
         color: #F76C6C;
         font-family: raleway, sans-serif;
+        text-align: center;
         padding: 0px 0px 25px 0px;
     }
 
     h4 {
-        font-size: 10px;
+        font-size: 80%;
         font-weight: 700;
-        text-transform: uppercase;
         text-align: center;
         color: #F76C6C;
         font-family: montserrat, sans-serif;
-        padding: 30px 0px 10px 0px;
+        padding: 0px 0px 20px 0px;
+        margin-top: 65px;
+
 
     }
+
+    #gallery-banner {
+        display: none;
+    }
+
     .gallery {
         width: 100%;
     }
@@ -50,13 +159,14 @@
 
         list-style: none;
         background-color: #fff;
+        opacity: 80%;
     }
 
     #nav-gallery li a {
         width: auto;
 
         font-family: raleway, sans-serif;
-        font-size: 0.750em;
+        font-size: 90%;
         font-weight: 500;
         text-decoration: none;
         text-transform: uppercase;
@@ -74,51 +184,22 @@
         align-items: center;
     }
 
-    .gallery-picture {
-        margin: auto;
-        max-width: 280px;
-        height: 280px;
-        background-color: black;
-        margin-top: 40px;
+    #gallery-header {
+        width: 100%;
+        z-index: 2;
+        position: fixed;
     }
 
-    .gallery-picture img {
-        width: 100%;
-        height: 100%;
+    .gallery-picture {
+        margin: auto;
+        width: 280px;
+        height: 280px;
+        background-color: black;
         
-        background-color: #fff;
     }
 
     .course-container {
-        border-bottom: 1px solid grey;
+        margin-top: 40px;
+        border-bottom: 1px solid #f1f1f1;
     }
-
-    #classic-entree {
-        background-image: url(/ressources/phone/classic-entree.jpg);
-    }
-    #classic-main {
-        background-image: url(/ressources/phone/classic-main.jpg);
-    }
-    #classic-dessert {
-        background-image: url(/ressources/phone/classic-dessert.jpg);
-    }
-    #spicy-entree {
-        background-image: url(/ressources/phone/spicy-entree.jpg);
-    }
-    #spicy-main {
-        background-image: url(/ressources/phone/spicy-main.jpg);
-    }
-    #spicy-dessert {
-        background-image: url(/ressources/phone/spicy-dessert.jpg);
-    }
-    #vegan-entree {
-        background-image: url(/ressources/phone/vegan-entree.jpg);
-    }
-    #vegan-main {
-        background-image: url(/ressources/phone/vegan-main.jpg);
-    }
-    #vegan-dessert {
-        background-image: url(/ressources/phone/vegan-dessert.jpg);
-    }
-
 }
