--- a/styles/style.css
+++ b/styles/style.css
@@ -30,15 +30,18 @@ h1 {
 }
 
 h2 {
-  font-size: 19px;
+  font-size: 2.19em;
   font-weight: 500;
-  font-family: raleway, sans-serif;
+  text-transform: uppercase;
+  color: #38424e;
+  font-family: montserrat, sans-serif;
 }
 
 h3 {
-  font-size: 24px;
-  font-family: montserrat, sans-serif;
+  font-size: 1.25em;
   font-weight: 500;
+  text-transform: uppercase;
+  font-family: raleway, sans-serif;
 }
 
 
@@ -85,3 +88,4 @@ h3 {
 .nav-items-container a:hover {
   text-decoration: underline;
 }
+
