--- a/styles/presentations.css
+++ b/styles/presentations.css
@@ -78,7 +78,12 @@
   .p{
     display: flex;
     justify-content: center;
-    margin: 5px 5px 5px 5px;
+    line-height: 6px;
+    text-align: center;
+    text-indent: 15px;
+    width: 100%;
+    margin: 8px;
+    padding: 8px;
     font-size: 16px;
     font-family: raleway , sans-serif;
     color:  rgb(25, 25, 25);
