--- a/reservation.css
+++ b/reservation.css
@@ -4,11 +4,13 @@ h1, h2 {
 }
 
 h1 {
+    margin: 0px auto;
     background: url('reservation-img.jpg') center/cover;
-    height: 10vh;
-    line-height: 10vh;
+    height: 30vh;
+    line-height: 30vh;
     color: white;
-    text-shadow: 0px 0px 3px black;
+    text-shadow: 0px 0px 4px black;
+    font-size: 2rem;
 }
 
 h2 {
@@ -20,7 +22,7 @@ h2 {
 
 #reservation-global-container, #reservation-phone-container, #reservation-events-container {
     width: 100%;
-    margin: 25px auto;
+    margin: 0px auto;
     text-align: center;
     overflow-x: auto; 
 }
@@ -112,10 +114,17 @@ a {
 
 @media screen and(min-width: 549px) {
 
+    h1 {
+        height: 30vh;
+        line-height: 30vh;
+        font-size: 4rem;
+    }
+
     #reservation-global-container {
         /*display: flex;
         justify-content: space-around;*/
     }
+
     .reservation-input-element {
         display: inline-block;
     }
