--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.19em;
+  font-size: 19px;
   font-weight: 500;
   text-transform: uppercase;
   color: #38424e;
@@ -38,7 +38,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.25em;
+  font-size: 24em;
   font-weight: 500;
   text-transform: uppercase;
   font-family: raleway, sans-serif;
