--- a/styles/presentations.css
+++ b/styles/presentations.css
@@ -59,14 +59,24 @@
   }
 
   #title {
+    display: block;
+    text-align: center;
     color: var(--title-color);
     font-size: 30px;
     font-family: montserrat, sans-serif;
     font-weight: 500;
-    text-align: center;
-    display: block;
     padding: 20px;
   
+  }
+
+  .small-titles {
+    display: block;
+    text-align: center;
+    color: var(--title-color);
+    font-size: 22px;
+    font-family: montserrat, sans-serif;
+    font-weight: 500;
+    padding: 20px;
   }
 
   .space {
@@ -74,17 +84,16 @@
     margin: 15px;
   }
 
-  .p {
+  .article {
     display: block;
     line-height: 1.5;
-    text-align: left;
     text-indent: 15px;
-    margin: 8px;
-    padding: 8px;
+    margin: 1%;
     font-size: 16px;
     font-family: raleway , sans-serif;
     color:  rgb(25, 25, 25);
   }
+
   
   .image-burger {
     display: flex;
