--- a/styles/style.css
+++ b/styles/style.css
@@ -49,34 +49,6 @@ header {
   font-weight: 500;
 }
 
-/* text and img */
-
-
-.image-about {
-  align-content: center;
-  margin: 5px;
-  width: 100%;
-  height: 400px;
-  margin: 0 auto;
-}
-
-.burger {
-  align-content: center;
-  margin: 5px;
-  width: 100%;
-  height: 400px;
-  margin: 0 auto;
-}
-
-.p{
-  display: block;
-  text-align: center;
-  margin-block-start: 1em;
-  margin-inline-start: 1em;
-  font-size: 16px;
-  font-family: raleway , sans-serif;
-  color:  rgb(25, 25, 25);
-}
 
 /* NAVBAR */
 
@@ -160,10 +132,9 @@ header {
     transition: transform 0.5s ease-in;
 }
 
-
   .nav-burger-item li {
     list-style: none;
-    /* opacity: 0; */
+    opacity: 0;
   }
 
   .nav-burger-item a {
@@ -180,12 +151,11 @@ header {
   }
 
 
-
   /* NAV RESPONSIVE */
 
   @media screen and (max-width: 680px) {
     header {
-      position: absolute;
+      position: fixed;
       bottom: 0;
     }
 
