--- a/styles/avis.css
+++ b/styles/avis.css
@@ -7,11 +7,12 @@ h1 {
     background: url('../ressources/avis-img-2.jpg') center/cover;
     text-align: center;
     width: 100%;
-    margin: 0 20px;
-    height: 10vh;
-    line-height: 10vh;
+    margin: 0px auto;
+    height: 30vh;
+    line-height: 30vh;
     color: white;
     text-shadow: 2px 2px 3px black;
+    font-size: 2rem;
 }
 /****** Comments */
 
@@ -21,7 +22,7 @@ h1 {
     /*background-color: #f76c6c2a;*/
     box-shadow: 0px 3px 5px black;
     width: 100%;
-    margin: 30px 0;
+    margin: 0px 0;
     padding: 5px;
     min-height: 100%;
     overflow: auto;
@@ -76,7 +77,7 @@ h1 {
     text-align: center;
     width: 100%;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 0px;
 }
 
 .submit-element {
@@ -95,14 +96,22 @@ h1 {
 
 @media screen and (min-width: 549px) {
 
+    h1 {
+        height: 30vh;
+        line-height: 30vh;
+        font-size: 4rem;
+    }
+
     .unique-comment-container {
         margin: 25px;
     }
+
     .add-opinion-container {
         transform: scale(1.5);
         margin-top: 100px;
         margin-bottom: 100px;
     }
+
     textarea {
         resize: both;
         min-width: 50%;
