--- a/style.css
+++ b/style.css
@@ -48,35 +48,6 @@ header {
   font-weight: 500;
 }
 
-/* text and img */
-
-
-.image-about {
-  align-content: center;
-  margin: 5px;
-  width: 100%;
-  height: 400px;
-  margin: 0 auto;
-}
-
-.burger {
-  align-content: center;
-  margin: 5px;
-  width: 100%;
-  height: 400px;
-  margin: 0 auto;
-}
-
-.p{
-  display: block;
-  text-align: center;
-  margin-block-start: 1em;
-  margin-inline-start: 1em;
-  font-size: 16px;
-  font-family: raleway , sans-serif;
-  color:  rgb(25, 25, 25);
-}
-
 /* NAVBAR */
 
 .navbar {
@@ -89,9 +60,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 6vh;
-  width: 100%;
-  height: 13vh;
+  height: 6vh;
+  width: 100vw;
   background-color: var(--subtitle2-color);
 }
 
@@ -163,7 +133,7 @@ header {
 
   .nav-burger-item li {
     list-style: none;
-    /* opacity: 0; */
+    opacity: 0; 
   }
 
   .nav-burger-item a {
@@ -180,12 +150,11 @@ header {
   }
 
 
-
   /* NAV RESPONSIVE */
 
   @media screen and (max-width: 680px) {
     header {
-      position: absolute;
+      position: fixed;
       bottom: 0;
     }
 
@@ -202,6 +171,7 @@ header {
     }
 
     .nav-burger-item {
+      top:6vh;
       bottom: 12vh;
       height: 40vh;
       width: 45vw;
