--- a/styles/menu.css
+++ b/styles/menu.css
@@ -14,6 +14,7 @@
     background-color: var(--nav-text-color);
     border-radius: 12px;
     border: black 1px solid;
+    overflow:hidden;
     }
     .menu-top {
         display: grid;
