--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,28 @@ header {
   box-shadow: var(--box-shadow-color) 0 1px 7px;
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  margin-top: 30px;
+  background-color: #38424e;
+}
+
+footer p {
+margin: auto;
+font-size: 10px;
+color: #fff;
+}
+
+footer p a {
+margin: auto;
+color: #fff;
+}
+
 .main-title {
   color: var(--title-color);
   text-transform: uppercase;
@@ -295,4 +317,3 @@ header {
   top 0.4s ease-in-out,
   transform 0.4s 0.4s ease-in-out;
 }
-
