--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -95,7 +95,7 @@
   }
 
   .footer-style {
-    align-content: center;
+    text-align: center;
     padding: 10px;
     background-color: #6d8097;
     margin: 4px;
