adapt footer, changed buttons

--- a/styles/emploi.css
+++ b/styles/emploi.css
@@ -58,15 +58,15 @@
   flex-wrap: wrap;
   justify-content:space-around;
   flex-direction: row-reverse;
+  align-items: center;
   }
 
 select {
   display: block;
   margin: 0 auto;
-  margin-bottom: 20px;
   font-size: 17px;
   font-weight: bold;
-  padding: 10px;
+  padding: 20px;
   background-color:#F76C6C ;
   color: #fff;
   border-style:none;
@@ -81,7 +81,6 @@ option {
 button {
   display: block;
   margin: 0 auto;
-  margin-top: 20px;
   font-size: 17px;
   font-weight: bold;
   padding: 20px;
@@ -99,5 +98,11 @@ i {
 .offres {
   max-width:400px;
   max-height: 200px;
-  padding : 30px;
+  margin-bottom : 30px;
+  padding: 30px;
 }
+
+body {
+  position: relative;
+}
+
