add css in css menu and contact for footer problem resolution, made some small design changes in contact css for text area and text-container margin-top, add link to the logo

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -85,6 +85,10 @@
         color : darkgreen;
     }
 
+    footer {
+        position: relative;
+    }
+
 
 @media screen and (max-width: 500px){
     #carte{
