--- a/styles/contact.css
+++ b/styles/contact.css
@@ -122,6 +122,7 @@ body {
   align-items:center;
   margin-bottom: 10vh;
   padding-top: 15px;
+  margin-top: 20px;
 }
 
 .form-items {
@@ -143,6 +144,8 @@ body {
 .form-items input, .form-items textarea {
   border: var(--subtitle2-color) 2px solid;
   border-radius: 3px;
+  padding: 15px;
+  font-family: montserrat, sans-serif;
 }
 
 .form-submit {
@@ -160,6 +163,9 @@ body {
   margin-left: 10%;
 }
 
+footer {
+  position: relative;
+}
 
 /* Responsive */
 @media screen and (max-width: 1100px) and (min-width: 780px) {
