--- a/styles/avis.css
+++ b/styles/avis.css
@@ -4,7 +4,7 @@ body {
 }
 
 h1 {
-    background: url('../ressources/avis-img-2.jpg') center/cover;
+    background: url('../ressources/avis-img.jpg') center/cover;
     text-align: center;
     width: 100%;
     margin: 0px auto;
@@ -121,4 +121,9 @@ h1 {
         margin: 0 auto;
     }
 
+}
+
+
+footer {
+    margin-bottom: -100vh;
 }
