--- a/styles/contact.css
+++ b/styles/contact.css
@@ -19,7 +19,7 @@
 
 body {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
 }
 
 .container {
@@ -122,7 +122,6 @@ body {
   align-items:center;
   margin-bottom: 10vh;
   padding-top: 15px;
-  margin-top: 20px;
 }
 
 .form-items {
