--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,6 @@ footer {
   bottom: 0;
   width: 100%;
   height: 50px;
-  margin-top: 30px;
   background-color: #38424e;
 }
 
@@ -215,6 +214,10 @@ color: #fff;
     }
 
     .navbar .desktop {
+      display: none;
+    }
+
+    footer {
       display: none;
     }
   }
