--- a/styles/style.css
+++ b/styles/style.css
@@ -293,9 +293,9 @@ color: #fff;
 }
 
 
-/* Acceuil */
+/* Accueil */
 
-.acceuil-container {
+.accueil-container {
   width: 100vw;
   height: 94vh;
   display: flex;
@@ -304,7 +304,7 @@ color: #fff;
   flex-direction: column;
 }
 
-.acceuil-container img {
+.accueil-container img {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -314,7 +314,7 @@ color: #fff;
 }
 
 
-.acceuil-title-container {
+.accueil-title-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -323,9 +323,9 @@ color: #fff;
   height: 50vh;
 }
 
-/* Acceuil links */
+/* Accueil links */
 
-.acceuil-link-container {
+.accueil-link-container {
   width: 100vw;
   height: 44vh;
   display: flex;
@@ -334,7 +334,7 @@ color: #fff;
   background-color: var(--main-bg-color);
 }
 
-.acceuil-link {
+.accueil-link {
   width: 25%;
   height: 75%;
   border-radius: 3px;
@@ -344,7 +344,7 @@ color: #fff;
 }
 
 
-.acceuil-link button {
+.accueil-link button {
   margin-bottom: 15px;
   background-color: var(--main-bg-color);
   border-radius: 3px;
@@ -353,24 +353,24 @@ color: #fff;
   cursor: pointer;
 }
 
-.acceuil-link a {
+.accueil-link a {
   text-decoration: none;
   color: var(--subtitle3-color);
 }
 
-.acceuil-menu-img {
+.accueil-menu-img {
   background-image: url("/ressources/menu.jpg");
   background-position: center;
   background-size: cover;
 }
 
-.acceuil-present-img {
+.accueil-present-img {
   background-image: url("/ressources/present.jpg");
   background-position: center;
   background-size: cover;
 }
 
-.acceuil-order-img {
+.accueil-order-img {
   background-image: url("/ressources/order.jpg");
   background-position: center;
   background-size: cover;
