--- a/styles/style.css
+++ b/styles/style.css
@@ -117,9 +117,9 @@ footer p a {
 margin: auto;
 color: #fff;
 }
-footer {
+/* footer {   Mis en commentaire car fait beuger le footer de la page acceuil.
   position: relative;
-}
+} */
 .main-title {
   color: var(--main-bg-color);
   text-transform: uppercase;
@@ -220,7 +220,7 @@ footer {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color: var(--subtitle2-color);
+    background-color: var(--subtitle3-color);
     transition: transform 0.5s ease-in;
 }
 
@@ -292,16 +292,17 @@ footer {
 
 
 .accueil-link button {
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   background-color: var(--main-bg-color);
   border-radius: 3px;
-  padding: 4px;
+  padding: 4px 6px;
   border: none;
   cursor: pointer;
 }
 
 .accueil-link a {
   text-decoration: none;
+  font-size: 20px;
   color: var(--subtitle3-color);
 }
 
